<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="Okay">Okay 15%</string>
    <string name="good">Good 18%</string>
    <string name="Amazing">Amazing 20%</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="validation_fill_cost_of_service">fill the field "cost of service"!</string>
    <string name="latebutton">lateButton %s</string>

</resources>